<resources>
    <string name="app_name">Extreme Simon</string>
    <string name="start_game">Start Game</string>
    <string name="preferences">Preferences</string>
    <string name="game_over">Game Over</string>
    <string name="play_again">Play Again</string>
    <string name="back_to_main">Back To Main Menu</string>
    <string name="final_score">Final Score:</string>
    <string name="four_button">4 Button</string>
    <string name="eight_button">8 Button</string>
    <string name="time_attack">Time Attack</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="score">Score:</string>
    <string name="current_num">Next Number is:</string>
    <string name="time_left">Time Left:</string>
    <string name="timer">5</string>
</resources>